gzip find added